FIX: attachment single post was broken if title too long

--- a/css/awesome-lahar.css
+++ b/css/awesome-lahar.css
@@ -646,6 +646,7 @@ input[type="search"]::-webkit-search-results-decoration {
     padding: 40px 60px;
     max-width: 620px;
     box-shadow: 0 0 20px 0 rgba(153, 153, 153, 0.3);
+    min-height: calc(100vh - 230px);
 }
 
 @media only screen and (max-width: 400px) {
@@ -708,6 +709,7 @@ input[type="search"]::-webkit-search-results-decoration {
     font-size: 48px;
     text-transform: uppercase;
     color: rgba(0, 0, 0, 0.9);
+    word-wrap: break-word;
 }
 
 .single-attachment__title-wrapper {
@@ -722,9 +724,9 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .single-attachment__content img {
-    max-width: 720px;
+    max-width: 100%;
     height: auto;
-    box-shadow: 0px 0px 50px 0px rgba(153, 153, 153, 1);
+    box-shadow: 0 0 50px 0 rgba(153, 153, 153, 0.6);
 }
 
 .issue-cover {
@@ -739,7 +741,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .issue-cover img {
-    box-shadow: 0px 0px 40px 0px rgba(153, 153, 153, 1);
+    box-shadow: 0 0 40px 0 rgba(153, 153, 153, 1);
 }
 
 .archive-grid {
@@ -755,7 +757,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .archive-grid__item {
-    box-shadow: 0px 0px 30px 0px rgba(153, 153, 153, 1);
+    box-shadow: 0 0 30px 0 rgba(153, 153, 153, 1);
     margin: 16px;
     transition: .4s;
 }
